fix(components): auto-fix autopopulate

--- a/Components/AddEditProduct/AddEditProductView.axaml
+++ b/Components/AddEditProduct/AddEditProductView.axaml
@@ -273,7 +273,7 @@
 									Margin="0,20,0,0"
 									IsEnabled="False"
 									DisplayDateStart="{CompiledBinding MinimumExpiryDate}"
-									SelectedDate="{CompiledBinding ProductExpiry}">
+									SelectedDate="{CompiledBinding ProductExpiryOffset, Mode=TwoWay}">
 								</CalendarDatePicker>
 							</StackPanel>
 						</shadui:Card>
