--- a/Components/SupplierDialog/SupplierDialogCard.axaml
+++ b/Components/SupplierDialog/SupplierDialogCard.axaml
@@ -37,7 +37,7 @@
         <ScrollViewer HorizontalScrollBarVisibility="Auto">
             <StackPanel Spacing="0" Margin="0,0,10,0">
                 <TextBlock
-                    Text="Add Supplier Contact"
+                    Text="Add Product Supplier"
                     Foreground="{DynamicResource FontForeground}"
                     Classes="h4" />
                 <TextBlock
@@ -166,7 +166,7 @@
                                                         </StackPanel>
                                                         <StackPanel Orientation="Vertical" Spacing="5" Margin="0,10,0,0" HorizontalAlignment="Left">
                                                             <TextBlock
-                                                                Text="Warrant Expiry"
+                                                                Text="Expiration"
                                                                 FontSize="14"
                                                                 FontWeight="Medium"/>
                                                             <DatePicker
