chore: change texts and add new file type upload

--- a/Components/AddNewMember/AddNewMemberView.axaml
+++ b/Components/AddNewMember/AddNewMemberView.axaml
@@ -278,7 +278,7 @@
 												VerticalAlignment="Bottom"/>
 											<Button 
 												Classes="Secondary"
-												Content="View Uploaded Image"
+												Content="View Uploaded File"
 												Command="{CompiledBinding ViewConsentFileCommand}"
 												IsVisible="{CompiledBinding IsConsentFileSelected}"
 												VerticalAlignment="Bottom"/>
@@ -1000,7 +1000,7 @@
 											Margin="0,0,0,10">
 											<StackPanel Orientation="Horizontal" Spacing="10">
 												<TextBlock
-													Text="Consent letter required for members aged 3-14 years"
+													Text="Consent letter required for members aged 6-14 years"
 													FontSize="14"
 													FontWeight="Medium"
 													Foreground="{DynamicResource WarningColor}"
@@ -1022,7 +1022,7 @@
 												VerticalAlignment="Bottom"/>
 											<Button 
 												Classes="Secondary"
-												Content="View Uploaded Image"
+												Content="View Uploaded File"
 												Command="{CompiledBinding ViewConsentFileCommand}"
 												IsVisible="{CompiledBinding IsConsentFileSelected}"
 												VerticalAlignment="Bottom"/>
